--- a/LMS/Areas/Admin/Views/Student/AddStudent.cshtml
+++ b/LMS/Areas/Admin/Views/Student/AddStudent.cshtml
@@ -80,7 +80,7 @@
                                             <div class="row">
                                                 <div class="col-md-4">
                                                     <div class="form-group">
-                                                        <label>Student CNIC</label>
+                                                        <label>Student CNIC *</label>
                                                         <input id="Student_Cnic" asp-for="Student_Cnic" type="text" class="form-control" placeholder="CNIC">
                                                     </div>
                                                 </div>
@@ -110,7 +110,7 @@
                                                 </div>
                                                 <div class="col-md-4 px-1">
                                                     <div class="form-group">
-                                                        <label>Mobile Number</label>
+                                                        <label>Mobile Number *</label>
                                                         <input id="Student_MobNumber" asp-for="Student_MobNumber" type="text" class="form-control" placeholder="Mobile Number">
                                                     </div>
                                                 </div>
