--- a/LMS/Areas/Admin/Views/Student/EditStudent.cshtml
+++ b/LMS/Areas/Admin/Views/Student/EditStudent.cshtml
@@ -68,7 +68,7 @@
                                             <div class="row">
                                                 <div class="col-md-4 pr-1">
                                                     <div class="form-group">
-                                                        <label>Student Name</label>
+                                                        <label>Student Name *</label>
                                                         <input asp-for="Student_Name" type="text" class="form-control" placeholder="Student Name">
                                                     </div>
                                                 </div>
@@ -101,7 +101,7 @@
 
                                                 <div class="col-md-4 pl-1">
                                                     <div class="form-group" style="color:#9A9A9A;">
-                                                        <label>Gender</label><br>
+                                                        <label>Gender *</label><br>
                                                         Male&nbsp;&nbsp; <input asp-for="Student_Gender" name="Student_Gender" type="radio" value="Male" checked>  &nbsp;
                                                         Female&nbsp;&nbsp;  <input asp-for="Student_Gender" name="Student_Gender" type="radio" value="Female">
                                                     </div>
@@ -111,13 +111,13 @@
                                             <div class="row">
                                                 <div class="col-md-4 pr-1">
                                                     <div class="form-group">
-                                                        <label>Email</label>
+                                                        <label>Email (Login Id) *</label>
                                                         <input asp-for="Student_Email" type="text" class="form-control" placeholder="Email" readonly>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-4 px-1">
                                                     <div class="form-group">
-                                                        <label>Mobile Number</label>
+                                                        <label>Mobile Number *</label>
                                                         <input asp-for="Student_MobNumber" type="text" class="form-control" placeholder="Mobile Number">
                                                     </div>
                                                 </div>
