--- a/LMS/Areas/Admin/Views/User/Index.cshtml
+++ b/LMS/Areas/Admin/Views/User/Index.cshtml
@@ -143,11 +143,11 @@
                                             </div>
                                             <div class="form-group">
                                                 <label>User Name</label>
-                                                <input type="text" class="form-control" required="" name="User_Name" id="User_Name">
+                                                <input type="text" class="form-control" required="" name="User_Name" id="User_Name" readonly>
                                             </div>
                                             <div class="form-group">
                                                 <label>User Email</label>
-                                                <input type="text" class="form-control" required="" name="User_Email" id="User_Email">
+                                                <input type="text" class="form-control" required="" name="User_Email" id="User_Email" readonly>
                                             </div>
                                             <div class="form-group">
                                                 <label>User Password</label>
