--- a/LMS/Areas/Teachers/Views/Test/AddTestDetails.cshtml
+++ b/LMS/Areas/Teachers/Views/Test/AddTestDetails.cshtml
@@ -158,8 +158,9 @@
     function generateTextBoxes(count) {
 
         for (var i = 0; i < count; i++) {
-            $('#divQuestions').append(`<div class="questionObj"><div class="row"><div class="col-md-12 pr-1"><div class="form-group"><label>Question ` + (i + 1) + `</label><input type="text" class="form-control" name="question" placeholder="Question ` + (i + 1) + `" id="q` + (i + 1) + `"></div></div></div>
-                <div class="row"><div class="col-md-12 pr-1"><div class="form-group"><div class="row"><div id="qa` + (i + 1) + `" class="col-md-6"><input type="text" class="form-control" placeholder="Answer1" value=""><input type="text" class="form-control" placeholder="Answer2" value=""><input type="text" class="form-control" placeholder="Answer3" value=""><input type="text" class="form-control" placeholder="Answer4" value=""></div><div class="col-md-3"><div class="form-group"><label>Correct Answer</label><select class="form-control"><option>A</option><option>B</option><option>C</option><option>D</option></select></div></div><div class="col-md-3"><div class="form-group"><label>Question Type</label><select  class="form-control ddlType"><option value='1'>MCQ</option><option value='2'>Textual answer</option><option value='3'>File upload</option></select></div></div></div><br/><div class="row col-md-3"><input type="number" class="form-control" name="marks" placeholder="Marks"></div></div></div></div></div> <br/>`);
+            $('#divQuestions').append(`<div class="questionObj">
+                                       <div class="row"><div class="col-md-12 pr-1"><div class="form-group"><label>Question ` + (i + 1) + `*</label><input type="text" class="form-control" name="question" placeholder="Question ` + (i + 1) + `" id="q` + (i + 1) + `"></div></div></div>
+                                       <div class="row"><div id="qa` + (i + 1) + `" class="col-md-6"><div class="form-group"><input type="text" class="form-control" placeholder="Answer1" value=""><input type="text" class="form-control" placeholder="Answer2" value=""><input type="text" class="form-control" placeholder="Answer3" value=""><input type="text" class="form-control" placeholder="Answer4" value=""></div></div><div class="col-md-3"><div class="form-group"><label>Correct Answer *</label><select class="form-control"><option>A</option><option>B</option><option>C</option><option>D</option></select></div></div><div class="col-md-3"><div class="form-group"><label>Question Type *</label><select  class="form-control ddlType"><option value='1'>MCQ</option><option value='2'>Textual answer</option><option value='3'>File upload</option></select></div></div><br/><div class="row col-md-3" style="margin-left:0px;"><div class="form-group"><label>Marks *</label><input type="number" class="form-control" name="marks" placeholder="Marks"></div></div></div></div><br/>`);
         }
 
     }
@@ -198,11 +199,11 @@
 
     function generateFileControl(id, ddl) {
         $('#' + id).empty();
-        $('#' + id).append(`<div class="form-group">
-                            <label>File Upload</label>
+        $('#' + id).append(`
+                            <label>File Upload *</label>
                             <br />
-                            <input type="file" class="form-control" style="opacity: 1;margin-top: 30px;height: 40px;font-size: 1.2em;" />
-                            </div>`);
+                            <input type="file" class="form-control" style="opacity: 1;margin-top:0px;height: 40px;font-size: 1.2em;" />
+                            `);
     }
 
     function getDataFromDiv(questions) {
