--- a/LMS/Areas/Admin/Views/AssignSection/Index.cshtml
+++ b/LMS/Areas/Admin/Views/AssignSection/Index.cshtml
@@ -273,7 +273,7 @@
             if (ClassName === "0" || SectionName === "0") {
 
                 event.preventDefault();
-                toastr.error("Kindly Select Class,Section And Subject");
+                toastr.error("Kindly Select Class And Section");
 
             }
 
