--- a/LMS/Areas/Students/Views/Dashboard/Index.cshtml
+++ b/LMS/Areas/Students/Views/Dashboard/Index.cshtml
@@ -4,17 +4,10 @@
     Layout = "~/Areas/Students/Views/Shared/_Studentayout.cshtml";
 }
 
-<div class="panel-header panel-header-lg" style="background-image: url('/dashboard/assets/img/stdheader.png');">
-    <div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
-    <canvas id="bigDashboardChart" width="1106" height="10" class="chartjs-render-monitor" style="display: block; width: 1106px; height: 10px;"></canvas>
+<div class="panel-header panel-header-lg" style="background-image:url(/dashboard/assets/img/stdheader.png);">
+    <canvas id="bigDashboardChart"></canvas>
 </div>
-
-
-<div class="content-teacher">
-
-    <div class="row">
-        <div class="content">
-
+<div class="content">
             <div class="row">
                 <div class="col-lg-4">
                     <div class="card card-chart">
@@ -256,8 +249,7 @@
             </div>
 
         </div>
-    </div>
-</div>
+
 
 
 
