--- a/LMS/Areas/Teachers/Views/Attendance/AttendanceDeatils.cshtml
+++ b/LMS/Areas/Teachers/Views/Attendance/AttendanceDeatils.cshtml
@@ -377,7 +377,7 @@
 
 
         $('#AttendanceDetailPage').DataTable({
-
+            "aaSorting": [],
             "bLengthChange": false,
             "fixedHeader": { header: true, footer: true },
 
