--- a/LMS/Areas/Teachers/Views/Class/Lectures.cshtml
+++ b/LMS/Areas/Teachers/Views/Class/Lectures.cshtml
@@ -154,7 +154,9 @@
         });
 
 
-        $('#classpage').DataTable();
+        $('#classpage').DataTable({
+            "aaSorting": [],
+        });
 
     });
 </script>
