--- a/LMS/Areas/Teachers/Views/Dashboard/Index.cshtml
+++ b/LMS/Areas/Teachers/Views/Dashboard/Index.cshtml
@@ -8,17 +8,9 @@
 
 
 <div class="panel-header panel-header-lg" style="background-image:url(/Dashboard/assets/img/imgpsh_fullsize_anim.png);">
-   
-    <div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
-    <canvas id="bigDashboardChart" width="1106" height="10" class="chartjs-render-monitor" style="display: block; width: 1106px; height: 10px;"></canvas>
+    <canvas id="bigDashboardChart"></canvas>
 </div>
-
-
-<div class="content-teacher">
-
-    <div class="row">
-        <div class="content">
-
+<div class="content">
             <div class="row">
                 <div class="col-lg-4">
                     <div class="card card-chart">
@@ -260,21 +252,20 @@
             </div>
 
         </div>
-    </div>
-</div>
+   
 
 
 
 <footer class="footer">
-        <div class=" container-fluid ">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="https://www.creative-tim.com">
-                            Creative Tim
-                        </a>
-                    </li>
-                    <li>
+    <div class=" container-fluid ">
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">
+                        APEX E-LEARNING
+                    </a>
+                </li>
+                @*<li>
                         <a href="http://presentation.creative-tim.com">
                             About Us
                         </a>
@@ -283,17 +274,17 @@
                         <a href="http://blog.creative-tim.com">
                             Blog
                         </a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="copyright" id="copyright">
-                ©
-                <script>
-              document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-                </script>2020, Designed by <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
-            </div>
+                    </li>*@
+            </ul>
+        </nav>
+        <div class="copyright" id="copyright">
+            &copy;
+            <script>
+                document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
+            </script>, Designed by and Developed by <a href="http://www.isenrichment.org/" target="_blank">ISE</a>.
         </div>
-    </footer>
+    </div>
+</footer>
 
 
 
