--- a/LMS/Areas/Teachers/Views/Test/EditTestDetail.cshtml
+++ b/LMS/Areas/Teachers/Views/Test/EditTestDetail.cshtml
@@ -219,6 +219,8 @@
 
     function getDataFromDiv() {
 
+        debugger;
+
         var questionObj = {};
 
          data = new FormData();
@@ -226,6 +228,7 @@
         var form = $('form')[1];
 
         $(form).each(function () {
+
 
             var inputs = $(this).find('input');
 
