--- a/LMS/Views/Shared/Components/SPSidebar/SPSidebarVC.cshtml
+++ b/LMS/Views/Shared/Components/SPSidebar/SPSidebarVC.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<div class="sidebar-wrapper" id="sidebar-wrapper">
+<div class="sidebar-wrapper ps" id="sidebar-wrapper">
     <ul class="nav navigation">
         <li class="active">
             <a asp-area="students" asp-controller="dashboard" asp-action="index">
