--- a/LMS/Areas/Teachers/Views/Attendance/Session.cshtml
+++ b/LMS/Areas/Teachers/Views/Attendance/Session.cshtml
@@ -483,7 +483,7 @@
 
 
         $('#sessionpage').DataTable({
-
+            "aaSorting": [],
             "bLengthChange": false,
             "fixedHeader": { header: true, footer: true },
 
