--- a/LMS/Areas/Teachers/Views/Lecture/Index.cshtml
+++ b/LMS/Areas/Teachers/Views/Lecture/Index.cshtml
@@ -198,7 +198,7 @@
 
 
         $('#classpage').DataTable({
-
+            "aaSorting": [],
             "bLengthChange": false,
             "fixedHeader": { header: true, footer: true },
 
